...
                name = it
                nameIsError = false
            },
            keyboardOptions = KeyboardOptions(KeyboardCapitalization.Words),
            modifier = Modifier
                .fillMaxWidth()
                .testTag("nameField")
        )

        DialogValidationTextField(
            label = stringResource(R.string.routine_description),
            value = description,
            isError = descriptionIsError,
...
                description = it
                descriptionIsError = false
            },
            keyboardOptions = KeyboardOptions(KeyboardCapitalization.Sentences),
            modifier = Modifier
                .fillMaxWidth()
                .testTag("descField")
        )
    }
}

@Composable
@ExperimentalMaterialApi
...
